# Auto-research-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: api_error.py  cli.py  config.py  logging_config.py  main.py
app/clients/: arxiv_client.py  crossref_client.py  openalex_client.py  semantic_scholar_client.py
app/constant/: benchmark_alias_constant.py  fact_check_constant.py  llm_constant.py  paper_constant.py  pdf_table_constant.py  prompt_constant.py  report_constant.py  synthesis_constant.py  task_constant.py
app/middleware/: rate_limit.py
app/models/: research_models.py
app/services/: __init__.py
app/services/analysis/: __init__.py  author_graph_service.py  recommendation_service.py  trend_analysis_service.py
app/services/core/: __init__.py  graph_state.py  llm_service.py  report_service.py  research_graph.py  search_service.py
app/services/infrastructure/: __init__.py  (+9 more)
bench/: cases.json  run_bench.py
docs/: 中期报告_自动科研助手_2023010005.txt  自动科研助手_个人项目计划书.txt
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
tests/: conftest.py  test_fact_check_service.py  test_full_text_service.py  test_keyword_fallback.py  test_llm_service.py  test_main.py  test_memory_service.py  test_rate_limit.py  test_recommendation_service.py  test_report_archive_service.py  test_report_service.py  test_search_cache.py  test_search_service.py  test_task_registry.py  test_trend_analysis_service.py
(+34 files in other folders)
