[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-research-assistant"
version = "0.1.0"
description = "一个面向论文检索、阅读、比较、创新点挖掘与研究笔记生成的自动科研助手。"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "langgraph>=0.6.0,<1.0.0",
  "pdfplumber>=0.11.8",
  "pydantic>=2.11.0,<3.0.0",
  "pypdf>=5.6.0,<6.0.0",
  "requests>=2.32.0,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that call the real LLM API (deselect with '-m \"not integration\"')",
]
